# wahlkarte-brandenburg

./: .gitignore  data.json  flake.nix  geojson.js  index.html  shell.nix  wahlkarte.js
generate-boundaries/: .gitignore  Cargo.nix  Cargo.toml  Readme.md  geojson.js  out.geo.json  shell.nix
generate-boundaries/src/: .main.rs.swp  main.rs
wahlergebnisse-brandenburg/: .gitignore  Readme.md  generate.py  out.json  shell.nix
wahlergebnisse-brandenburg/raw/: DL_BB_2_KW2019.xlsx  DL_BB_BU2013.xlsx  DL_BB_BU2017.xlsx  DL_BB_EU2014.xlsx  DL_BB_EU2019.xlsx  DL_BB_LT2014.xlsx  fetch-raw.sh
