[package]
name = "generate-boundaries"
version = "0.1.0"
authors = ["Justin Humm <justin.humm@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
topojson = "*"
osm_boundaries_utils = "*"
osmpbfreader = "*"
geo = "*"
geojson = { version = "0.16.0", features = ["geo-types"] }
geo-types = "0.4.3"
serde_json = "*"
regex = "*"
docopt = "*"
serde = { version = "*", features = ["derive"] }
